Revision history for Dancer

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]
 - Test was failing under perl 5.8.9. (GH#1057, Tom Hukins)
 - Don't get tripped by YAML::XS's readonly values. (GH#1070)

 [DOCUMENTATION]

 [ENHANCEMENTS]
 - Dancer::Template::TemplateToolkit now supports DATA-embedded
    templates. (GH#1061, Jochen Lutz)
 - New function 'param_array'. (GH#1055, Yanick Champoux)

 [NEW FEATURES]

 [STATISTICS]

1.3130 2014-09-15
 [BUG FIXES]
 - Bogus dependency for 'mro'. (GH#1069)

 [STATISTICS]
 - code churn: 2 files changed, 21 insertions(+), 12 deletions(-)

1.3129 2014-09-09
 [BUG FIXES]
 - Dzil conversion left 'dancer' script behind. (GH#1066)

 [STATISTICS]
 - code churn: 17 files changed, 1425 insertions(+), 1432 deletions(-)

1.3128 2014-09-09
 [BUG FIXES]
 - Remove test dependency for Person and Person::Child. (GH#1063)

1.3127 2014-09-08
 [BUG FIXES]
 - Test was using deprecated 'import_warnings'. (GH#1045, mokko)
 - Fix default test names for headers and redirection test methods.
   (GH#1048, odyniec)
 - DANCER_SERVER_TOKENS and DANCER_SESSION_INFO are now
   DANCER_NO_SERVER_TOKENS and DANCER_NO_SESSION_INFO. And working. :-)
   (GH#1014, Yanick Champoux)
 - 'any' wasn't understanding 'del' (only 'delete').  (GH#1044, Yanick
   Champoux)

 [DISTRIBUTION]
 - Now using Dist::Zilla as package manager.

 [DOCUMENTATION]
 - Correct POD formatting for HTTP methods in introduction.pod. (GH#1047,
   Lx)

 [ENHANCEMENTS]
 - environment configs are now merged with the global config, versus the
   previous behavior that was overriding the whole config segments.
   (GH#1016, Yanick Champoux)
 - Dancer::Handler::Debug now accepts env variables from the command-line.
   (GH#1056, Yanick Champoux)
 - Accessing values abstracted as methods in Dancer::Session. (GH#1000,
   John Wittkoski)

1.3126 2014-07-14
 [BUG FIXES]
 - Bunch of files were not in the MANIFEST.

1.3125 2014-07-12
 [DOCUMENTATION]